# Duel

./: CMakeLists.txt  README.md  main.cpp
Source/: GameSetting.h  WorldState.h
Source/Math/: Angle.cpp  Angle.h  Vector.cpp  Vector.h  helpers.h
Source/Network/ProtoBuf/: .gitignore
Source/Output/Sender/: Sender.cpp  Sender.h
Source/Robot/: Robot.cpp  Robot.h
Source/Robot/Protocol/: data_lite.h  reader.c  reader.h  writer.c  writer.h
libgamepad/: CMakeLists.txt  installRequirements.sh
